--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "nanoid": "^3.1.12",
     "nodemon": "^2.0.4"
   }
 }
